<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.bloomroom.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_category"
        android:name="com.example.bloomroom.CategoryFragment"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_category" />
    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.example.bloomroom.OrderFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_order" />


    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.bloomroom.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>