<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_green"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/flower_login_logo"
        android:layout_width="229dp"
        android:layout_height="103dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="55dp"
        android:foregroundGravity="center"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/home_logo" />


    <ImageView

        android:id="@+id/flower_two"
        android:layout_width="225dp"
        android:layout_height="411dp"

        android:layout_gravity="bottom|right"

        android:layout_marginBottom="430dp"
        android:foregroundGravity="bottom|right"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/pngwing_3" />

    <LinearLayout
        android:id="@+id/signup_form"
        android:layout_width="match_parent"
        android:layout_height="473dp"
        android:layout_gravity="bottom"
        android:background="@drawable/upper_rounded"
        android:backgroundTint="@color/app_grey"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_head_text"
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center|center_horizontal"
            android:text="Login to your account"
            android:textColor="@color/text_grey"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/email_hint"
            android:textColor="@color/text_grey"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/emailInputLogin"
            android:layout_width="343dp"
            android:layout_height="57dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_edittext_background"
            android:drawableLeft="@drawable/baseline_mail_24"
            android:drawablePadding="8dp"
            android:fontFamily="@font/poppins"
            android:hint="@string/email_hint"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/password_hint"
            android:textColor="@color/text_grey"
            android:textSize="16sp" />

        <EditText
            android:inputType="textPassword"
            android:id="@+id/passwordInputLogin"
            android:layout_width="343dp"
            android:layout_height="57dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_edittext_background"
            android:drawableLeft="@drawable/baseline_lock_24"
            android:drawablePadding="8dp"
            android:fontFamily="@font/poppins"
            android:hint="@string/password_hint"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="end"
            android:text="@string/forget_password"
            android:textColor="@color/primary_green" />

        <Button
            android:id="@+id/button2"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:height="60dp"
            android:fontFamily="@font/poppins_semibold"
            android:onClick="login"
            android:text="@string/login_text"
            android:textSize="18sp"
            app:cornerRadius="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="32dp"
            android:gravity="top"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:gravity="end"
                android:text="@string/do_not_have_account"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:onClick="loadSignIn"
                android:text="@string/sign_in"
                android:textColor="@color/primary_green"
                android:textSize="16dp" />
        </LinearLayout>


    </LinearLayout>


</FrameLayout>