<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_green"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/flower_sign_up_logo"
        android:layout_width="150dp"
        android:layout_height="67dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="55dp"
        android:foregroundGravity="center"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/home_logo" />


    <ImageView

        android:id="@+id/flower_two"
        android:layout_width="139dp"
        android:layout_height="267dp"

        android:layout_gravity="bottom|right"

        android:layout_marginBottom="600dp"
        android:foregroundGravity="bottom|right"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/pngwing_3" />

    <LinearLayout
        android:id="@+id/signup_form"
        android:layout_width="match_parent"
        android:layout_height="640dp"
        android:layout_gravity="bottom"
        android:background="@drawable/upper_rounded"
        android:backgroundTint="@color/app_grey"
        android:orientation="vertical">

        <TextView
            android:id="@+id/signup_head_text"
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center|center_horizontal"
            android:text="Login to your account"
            android:textColor="@color/text_grey"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/email_hint"
            android:textColor="@color/text_grey"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/emailInputSignUp"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/rounded_edittext_background"
            android:drawablePadding="8dp"
            android:fontFamily="@font/poppins"
            android:paddingLeft="16dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/name_hint"
            android:textColor="@color/text_grey"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/nameInputSignUp"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/rounded_edittext_background"
            android:drawablePadding="8dp"
            android:fontFamily="@font/poppins"
            android:paddingLeft="16dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/password_hint"
            android:textColor="@color/text_grey"
            android:textSize="16sp" />

        <EditText
            android:inputType="textPassword"
            android:id="@+id/passwordInputSignUp"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/rounded_edittext_background"
            android:drawablePadding="8dp"
            android:fontFamily="@font/poppins"
            android:paddingLeft="16dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/confirm_password_hint"
            android:textColor="@color/text_grey"
            android:textSize="16sp" />

        <EditText
            android:inputType="textPassword"
            android:id="@+id/confirmPasswordInputSignUp"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/rounded_edittext_background"
            android:drawablePadding="8dp"
            android:fontFamily="@font/poppins"
            android:paddingLeft="16dp"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:height="60dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/sign_in"
            android:textSize="18sp"
            app:cornerRadius="15dp"
            android:onClick="signIn"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="32dp"
            android:gravity="top"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:gravity="end"
                android:text="@string/already_have_an_account"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:onClick="loadLogin"
                android:text="@string/login_text"
                android:textColor="@color/primary_green"
                android:textSize="16dp" />
        </LinearLayout>


    </LinearLayout>


</FrameLayout>