<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_edittext_background"
    tools:context=".AddFlowerActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@null"
            android:foregroundGravity="center"
            app:srcCompat="@drawable/baseline_arrow_back_ios_24"
            tools:layout_editor_absoluteX="48dp"
            tools:layout_editor_absoluteY="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:text="Add Flower"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="18dp" />
    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@drawable/upper_rounded"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <FrameLayout
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                app:srcCompat="@drawable/image_upload_default" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="bottom|right"
                android:background="@drawable/rounded_background"
                android:backgroundTint="@color/grey"
                android:onClick="uploadImage"
                app:srcCompat="@drawable/baseline_camera_alt_24" />
        </FrameLayout>

        <Button
            android:id="@+id/addButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="44dp"
            android:layout_marginRight="44dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/rounded_edittext_background"
            android:onClick="onClick"
            android:text="@string/save_changes" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="44dp"
                    android:layout_marginRight="44dp"
                    android:background="@drawable/rounded_edittext_background"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/flower_name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/priceField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="44dp"
                    android:layout_marginRight="44dp"
                    android:background="@drawable/rounded_edittext_background"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/category_price" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/categorySpinner"
                android:layout_width="310dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginLeft="44dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="44dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/rounded_edittext_background" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/aboutField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="44dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="44dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/rounded_edittext_background"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/flower_About" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>